# Reflection2

./: .gitignore  PLAN.md  SPEC_lmstudio_fragment_callback.md  SPEC_streaming_and_thinking.md  pyproject.toml  readme.md  reflection_app.py  requirements.txt  setup.py
modules/agent/: agent_settings.py  langgraph.json
modules/agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
modules/agent/agent_logic/main/: main.py  main_nodes.py  main_state.py  memory.py  message_log.py
modules/agent/agent_logic/models/: main_models.py  mistral_q.py
modules/integrations/: discord_presence.py
modules/models/: model_interface.py
modules/orchestration/: inference.py  message.py  orc_settings.py
modules/orchestration/sql/: chatLogStore.py
modules/orchestration/tests/: conftest.py  test_orchestration.py  test_sql.py
modules/user_interface/host/: app.py  window_ref.py
modules/user_interface/web/: index.html  package-lock.json
modules/vectors/: VectorService.py  main_pipeline.py  settings.py
modules/vectors/components/: chunker.py  e_model.py  embedding.py  parser.py  util.py
modules/vectors/index/: VectorIndex.py  chroma_store.py
modules/vectors/test_data/: chunked_output.csv  parsed_elements.csv
modules/vectors/tests/: conftest.py  test_parse_chunk.ipynb  test_pipeline.py  test_pipeline_nb.ipynb  test_query.py  test_render.py  test_upsert.py
modules/vectors/utils/: file_utils.py
tests/: test_model_interface.py  test_streaming.py
tools/: random_idea.ipynb
(+21 files in other folders)
