[project]
name = "reflection"
version = "0.1.0"
description = "Off-grid personal knowledge system — chat with your Obsidian notes via a local LLM"
requires-python = ">=3.12"

dependencies = [
    # Markdown parsing & chunking
    "mistune>=3.0",
    "tiktoken>=0.9",

    # Vector store
    "chromadb>=0.6",

    # Embeddings (OpenAI via LangChain wrapper — candidate for removal later)
    "langchain-openai>=0.3",

    # LLM backends
    "openai>=1.0",
    "lmstudio>=1.0",

    # HTTP / SSL
    "httpx>=0.27",
    "certifi>=2024.0",

    # Desktop UI
    "pywebview>=5.0",
    "pyside6>=6.11",
    "qtpy>=2.4",

    # Data
    "pandas>=2.0",

    # Config & env
    "python-dotenv>=1.0",

    # Discord rich presence
    "pypresence>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests", "modules"]
python_files = ["test_*.py"]
